--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/img/avatar.png
-/img/sistema.png
-/img/site.png
-/img/xavatar.png
-/img/shop.png
+img/avatar.png
+img/sistema.png
+img/site.png
+img/xavatar.png
+img/shop.png
